@@ -228,4 +228,6 @@ REL1_10_11: (released ...)
 - Added 'SkinTools' extension
 - Added 'UserTools' extension ( new right 'userdetails' )
 - Fixed major bug in 'RegexNamespaceContext'
-- 
+- FileSystemSyntaxColoring: some optimizations for speed
+- ParserPhase2: better handling of 'disable' commands
+-
